--- a/.env
+++ b/.env
@@ -8,12 +8,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=grammarlydemo
+#DB_USERNAME=root
+#DB_PASSWORD=
+
+DB_CONNECTION=pgsql
+DB_HOST=dpg-cm7b0aud3nmc73cfu5eg-a
+DB_PORT=5432
 DB_DATABASE=grammarlydemo
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=grammarlydemo_user
+DB_PASSWORD=47LNE8uepzdmSWwqfEi4mzqqK6KKOiNM
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
