--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,4 @@
-.ignore
+@@ -0,0 +1,11 @@
 /node_modules
 /public/hot
 /public/storage
@@ -6,5 +6,7 @@
 /vendor
 .env
 .phpunit.result.cache
+Homestead.json
+Homestead.yaml
 npm-debug.log
 yarn-error.log
