--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -1,23 +1,62 @@
+@@ -0,0 +1,61 @@
 server {
-        listen   80; ## listen for ipv4; this line is default and implied
-        #listen   [::]:80 default ipv6only=on; ## listen for ipv6
+  # Render provisions and terminates SSL
+  listen 80;
 
-        root /var/www/html/laravel/public;
-        index index.html index.htm index.php;
+  # Make site accessible from http://localhost/
+  server_name _;
 
-        # Make site accessible from http://localhost/
-        server_name localhost;
+  root /var/www/html/public;
+  index index.html index.htm index.php;
 
-        location / {
-                try_files $uri $uri/ /index.php?$query_string;
-        }
+  # Disable sendfile as per https://docs.vagrantup.com/v2/synced-folders/virtualbox.html
+  sendfile off;
 
-        location ~ \.php$ {
-                include snippets/fastcgi-php.conf;
-                fastcgi_pass unix:/run/php/php7.0-fpm.sock;
-        }
+  # Add stdout logging
+  error_log /dev/stdout info;
+  access_log /dev/stdout;
 
-        location ~ /\.ht {
-                deny all;
-        }
+  # block access to sensitive information about git
+  location /.git {
+    deny all;
+    return 403;
+  }
+
+  add_header X-Frame-Options "SAMEORIGIN";
+  add_header X-XSS-Protection "1; mode=block";
+  add_header X-Content-Type-Options "nosniff";
+
+  charset utf-8;
+
+  location / {
+      try_files $uri $uri/ /index.php?$query_string;
+  }
+
+  location = /favicon.ico { access_log off; log_not_found off; }
+  location = /robots.txt  { access_log off; log_not_found off; }
+
+  error_page 404 /index.php;
+
+  location ~* \.(jpg|jpeg|gif|png|css|js|ico|webp|tiff|ttf|svg)$ {
+    expires 5d;
+  }
+
+  location ~ \.php$ {
+    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    fastcgi_pass unix:/var/run/php-fpm.sock;
+    fastcgi_index index.php;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+    include fastcgi_params;
+  }
+
+  # deny access to . files
+  location ~ /\. {
+    log_not_found off;
+    deny all;
+  }
+
+  location ~ /\.(?!well-known).* {
+    deny all;
+  }
 }
