--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 APP_NAME=Laravel
-APP_ENV=local
+#APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:xxeLf14NqNCHV3LDX/nWTn7YJX/tFaKyZJfFwrr6K8A=
 APP_DEBUG=true
 APP_URL=http://localhost
