--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:xxeLf14NqNCHV3LDX/nWTn7YJX/tFaKyZJfFwrr6K8A=
 APP_DEBUG=true
-APP_URL=http://localhost
+#APP_URL=http://localhost
+APP_URL=https://grammarlydemo.onrender.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
