--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 APP_NAME=Laravel
 #APP_ENV=local
 APP_ENV=production
-APP_KEY=base64:xxeLf14NqNCHV3LDX/nWTn7YJX/tFaKyZJfFwrr6K8A=
+#APP_KEY=base64:xxeLf14NqNCHV3LDX/nWTn7YJX/tFaKyZJfFwrr6K8A=
+APP_KEY=base64:7/iBrQllQgfb0VniFBdT/VhlnEBrZhQue37Vb80DnkY=
 APP_DEBUG=true
 #APP_URL=http://localhost
 APP_URL=https://grammarlydemo.onrender.com
