--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -41,6 +41,8 @@ server {
     expires 5d;
   }
 
+  location ~* .(js|css|png|jpg|jpeg|gif|ico|html)$ { expires max; }
+
   location ~ \.php$ {
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
     fastcgi_pass unix:/var/run/php-fpm.sock;
