--- a/.env
+++ b/.env
@@ -17,7 +17,8 @@ LOG_LEVEL=debug
 #DB_DATABASE=grammarlydemo
 #DB_USERNAME=root
 #DB_PASSWORD=
- 
+
+DATABASE_URL = postgres://grammarlydemo_user:47LNE8uepzdmSWwqfEi4mzqqK6KKOiNM@dpg-cm7b0aud3nmc73cfu5eg-a/grammarlydemo
 DB_CONNECTION=pgsql
 DB_HOST=dpg-cm7b0aud3nmc73cfu5eg-a
 DB_PORT=5432
