--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,20 @@
 # render.yaml
 databases:
-  - name: laravel_memcache_db
+  - name: grammarlydemo
     plan: free
-    databaseName: laravel_memcache_db
-    user: laravel_memcache_db
+    databaseName: grammarlydemo
+    user: grammarlydemo_user
 
 services:
   - type: web
     plan: free
-    name: laravel_memcache
+    name: grammarlydemo
     runtime: docker
     envVars:
       # Database
       - key: DATABASE_URL
         fromDatabase:
-          name: laravel_memcache_db
+          name: grammarlydemo
           property: connectionString
       - key: DB_CONNECTION
         value: pgsql
