--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,7 @@ services:
     plan: free
     name: grammarlydemo
     runtime: docker
+    command: docker-compose exec app php artisan migrate --seed
     envVars:
       # Database
       - key: DATABASE_URL
